Actividades/letschat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lets-chat
  labels:
    app: lets-chat
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: lets-chat
    tier: frontend
