Actividades/letschat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lets-chat
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.chat-alexg.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lets-chat
            port:
              number: 8080
